--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-
+<!DOCTYPE html>
+<html lang="pt">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>henrick brai nunes</title>
+     <link rel="shortcut icon" href="recebo.jpg" type="image/x-icon">
+</head>
+<body>
+    <img.src="image.jpg" alt="oioioi.jpg">
+    <h1>alguem aqui</h1>
+    <p>babababa</p>
+</body>
+</html>
